A......... [ZBXNEXT-4933] dropped support of "elementid" in map.create() and map.update() methods (Sasha)
A......... [ZBXNEXT-4933] dropped support of string format for "headers" and "variables" in httptest.create() and httptest.update() methods (Sasha)
..F....... [ZBXNEXT-4873] implemented single dot datasets to be drawn as points in line vector graphs (miks)

Bug fixes:
A......... [ZBX-14613] fixed hostgroup.delete and host.delete API methods to validate maintenance constraint (talbergs)
..F....... [ZBX-15374] fixed SQL and PHP errors on chart3.php page (Sasha)
...G...... [ZBX-15301] fixed monotonous lag behind in Windows "system.localtime" (MVekslers)
..F....... [ZBX-15377] fixed error messages for arrays in GET parameters (Sasha)
A......... [ZBX-15369] fixed "Undefined index: label" in map.update() method (Sasha)
..F....... [ZBX-15376] fixed "Undefined index: refresh" on several pages with disabled guest user (Sasha)
..F....... [ZBX-15375] fixed web scenario step name can consist only of whitespaces (agriscenko)
..F....... [ZBX-15375] fixed undefined index on Web scenario configuration page (Sasha)
..F....... [ZBX-15372] fixed SQL and PHP errors on "Slide shows" page when enter slides.php witout GET parameters (Sasha)
A......... [ZBX-15359] fixed undefined index in maintenance.create and maintenance.update API calls (Sasha)
A......... [ZBX-15358] fixed undefined index in configuration.import API call without one or several rules (Sasha)
A......... [ZBX-15355] fixed undefined index in configuration.import API call (Sasha)
A......... [ZBX-14926] fixed empty "inventory" property being returned by API if inventory mode is disabled (agriscenko)
A......... [ZBX-15354] fixed undefined index in API calls without "auth" parameter (Sasha)
...G...PS. [ZBX-15399] fixed IPv4 connections not being accepted when IPv6 mask is used (akozlovs)
A......... [ZBX-14331] fixed error allowed to change interface type which is already used by items (gcalenko)