@@ -30,6 +30,7 @@ require_once dirname(__FILE__).'/testDRule.php';
 require_once dirname(__FILE__).'/testHost.php';
 require_once dirname(__FILE__).'/testHostGroup.php';
 require_once dirname(__FILE__).'/testIconMap.php';
+require_once dirname(__FILE__).'/testItem.php';
 require_once dirname(__FILE__).'/testMaintenance.php';
 require_once dirname(__FILE__).'/testProxy.php';
 require_once dirname(__FILE__).'/testScripts.php';
@@ -57,6 +58,7 @@ class ApiJsonTests {
 		$suite->addTestSuite('testHost');
 		$suite->addTestSuite('testHostGroup');
 		$suite->addTestSuite('testIconMap');
+		$suite->addTestSuite('testItem');
 		$suite->addTestSuite('testMaintenance');
 		$suite->addTestSuite('testProxy');
 		$suite->addTestSuite('testScripts');
