@@ -8,6 +8,7 @@ A......... [ZBXNEXT-4933] dropped support of string format for "headers" and "va
 ..F....... [ZBXNEXT-4873] implemented single dot datasets to be drawn as points in line vector graphs (miks)
 
 Bug fixes:
+A......... [ZBX-15373] fixed removal of trigger when deleting discovered item; fixed removal of dependent child items when removing master item (vmurzins)
 A......... [ZBX-14613] fixed hostgroup.delete and host.delete API methods to validate maintenance constraint (talbergs)
 ..F....... [ZBX-15374] fixed SQL and PHP errors on chart3.php page (Sasha)
 ...G...... [ZBX-15301] fixed monotonous lag behind in Windows "system.localtime" (MVekslers)
@@ -99,6 +100,7 @@ New features:
 ...G...... [ZBX-14876] added a new optional parameter <regex_excl_dir> to items vfs.dir.size[] and vfs.dir.count[] (viktors)
 
 Bug fixes:
+A......... [ZBX-15373] fixed removal of trigger when deleting discovered item; fixed removal of dependent child items when removing master item (vmurzins)
 A......... [ZBX-14613] fixed hostgroup.delete and host.delete API methods to validate maintenance constraint (talbergs)
 ..F....... [ZBX-14863] fixed authentication settings form of LDAP anonymous binding (gcalenko)
 ..F....... [ZBX-15374] fixed SQL and PHP errors on chart3.php page (Sasha)
